# 3DCopy

./: .gitignore  CMakeLists.txt  CMakeLists_BACKUP_3356.txt  CMakeLists_BASE_3356.txt  README.md  install.sh
include/: Cli.h  Mesh.h  Normals.h  Registration.h  Slicer.h
resources/slic3r_profiles/filament/: ABS.ini  PLA.ini
resources/slic3r_profiles/print/: Fast.ini  High.ini  Normal.ini
resources/slic3r_profiles/printer/: Duplicator 6.ini
src/: Cli.cpp  ICP_DID_NOT_CONVERGE_EXCEPTION.cpp  ICP_DID_NOT_CONVERGE_EXCEPTION.h  Mesh.cpp  Normals.cpp  Registration.cpp  Slicer.cpp  lamppost.pcd  main.cpp  test_client.cpp
tests/: cli_tests.py
